# garmin-grafana

./: .env.example  .gitignore  CLAUDE.md  DATABASE_SCHEMA.md  README.md  SSL_RR_IMPLEMENTATION_PLAN.md  backup-covers-volumes  backup-influxdb.sh  cleanup-device-tags.sh  compose.yml  create-backup.sh  export-dashboard.sh
Grafana_Dashboard/: Garmin-Grafana-Dashboard.json
mcp-server/: .dockerignore  Dockerfile  pyproject.toml  run-server.sh
mcp-server/src/garmin_mcp/: __init__.py  db.py  formatters.py  queries.py  server.py
src/garmin_grafana/: garmin_fetch.py
